--- a/src/components/Flowchart.css
+++ b/src/components/Flowchart.css
@@ -1,5 +1,5 @@
 .flow-container {
-  margin: 40px 15px 0px 15px;
+  margin: 30px 15px -20px 15px;
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%);
 }
 
@@ -9,7 +9,7 @@
   justify-content: space-evenly;
   align-items: center;
   margin: 0px 0px 50px 0px;
-  padding: 30px 0px 30px 0px;
+  padding: 0px 0px 30px 0px;
 background-color: white;
 border-radius: 0px 0px 8px 8px;
 }
@@ -17,7 +17,7 @@ border-radius: 0px 0px 8px 8px;
 .flowchart-container .flow {
   width: 250px;
   height: 250px;
-  margin: 0px 20px 20px 20px;
+  margin: 0px 50px 10px 50px;
 }
 
 .flowchart-container .flow img {
