--- a/src/components/Grocery.css
+++ b/src/components/Grocery.css
@@ -45,7 +45,7 @@
   border-radius: 8px 8px 0px 0px;
   /* margin: 0 auto;
     margin-top: 40px; */
-  margin: 0px 15px;
+  margin: 0px 15px 0px 15px;
 }
 
 .head-one {
