--- a/src/components/Values.css
+++ b/src/components/Values.css
@@ -9,7 +9,7 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: white;
-    padding-top: 20px;
+    /* padding-top: 20px; */
     border-radius: 0px 0px 8px 8px;
   }
 
@@ -31,7 +31,7 @@
   .values-container .values {
     width: 250px;
     height: 250px;
-    margin: 0px 20px 25px 20px;
+    margin: 0px 50px 10px 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,7 +47,7 @@
     font-size: 16px;
     color: #B3561B;
     text-align: center;
-    padding: 5px 15px;
+    padding: 0px 15px;
     font-weight: 500;
   }
   
@@ -55,7 +55,7 @@
     .values-container .values {
         width: 250px;
         height: 250px;
-        margin: 0px 20px 25px 20px;
+        margin: 0px 20px 10px 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
